# Discord-Bot

./: .gitignore  Procfile  background_tasks.py  config.json  keep_alive.py  main.py  pyproject.toml  requirements.txt
cDatabase/: DB_Algorithm.py  DB_Session.py  DB_Settings.py  DB_Users.py  KV_Database.py
commands/: admin-help.py  change-handle.py  clear-log.py  error-log.py  help.py  my-info.py  register-user.py  register.py  remove-user.py  server-info.py
databases/: CodeForces_Ranking.py  db_algorithms.py  db_settings.py  db_users.py
helper/: Algorithm.py  CF_API.py  GitHub.py  LeaderBoard.py  Session.py  User.py  cEmbed.py  cLog.py  cTime.py
module_commands/algo/: admin-help.py  all.py  commit.py  delete.py  get.py  help.py  map.py  search.py
module_commands/bot/: active-tag.py  default-channel.py  help.py  info.py  prefix.py
module_commands/cf/: compare.py  contest.py  info.py  solved.py  standings.py  upcoming.py
module_commands/comp/: help.py
module_commands/session/: admin-help.py  change.py  create.py
