[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["adminadmin25 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "1.7.3"
"CodeforcesApiPy" = "2.0.8"
"PyGithub" = "1.55"
"Flask" = "1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
